--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
         </div>
         <div id="Components" class="tabcontent">
         </div>
-        <div id="Functions" class="tabcontent">
+        <div id="Operations" class="tabcontent">
         </div>
         <div id="Hierarchy" class="tabcontent">
         </div>
