u/r deactivated from forms

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <link rel="stylesheet" href="./style/buttonTooltips.css">
     <link rel="stylesheet" href="./style/form.css">
     <link rel="stylesheet" href="./style/infoTooltip.css">
+    <link rel="stylesheet" href="./style/lineName.css">
     <link rel="stylesheet" href="./style/menu.css">
     <link rel="stylesheet" href="./style/scrollbar.css">
     <link rel="stylesheet" href="./style/style.css">
