hierarchy button appearance fixed

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
         <div id="Operations" class="tabcontent">
         </div>
-        <div id="Hierarchy" class="tabcontent">
+        <div id="Hierarchy" class="tabcontent" style="height: 65.74px;">
         </div>
     </div>
 
