unsubdivide operation okay

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
     <script src="https://code.jquery.com/ui/1.13.0/jquery-ui.js"></script>
     <script src="dist/jstree.min.js"></script>
+    <script src="dist/jstree.js"></script>
+    <!-- <script type="text/javascript" src="jquery.jstree.js"></script>
+    <script type="text/javascript" src="_lib/jquery.js"></script> -->
     <script src="./libs/dom-to-image-more.min.js"></script>
 </head>
 
