rightside tab is resizable

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <link rel="stylesheet" href="./style/infoTooltip.css">
     <link rel="stylesheet" href="./style/lineName.css">
     <link rel="stylesheet" href="./style/menu.css">
+    <link rel="stylesheet" href="./style/rods.css">
     <link rel="stylesheet" href="./style/scrollbar.css">
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/triangle.css">
