config okay. UI & resizing needs fixing

--- a/index.html
+++ b/index.html
@@ -47,6 +47,8 @@
         </div>
         <div id="Hierarchy" class="tabcontent" style="height: 65.74px;">
         </div>
+        <div id="Settings" class="tabcontent">
+        </div>
     </div>
 
 
