--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv='cache-control' content='no-cache'>
     <meta http-equiv='expires' content='0'>
     <meta http-equiv='pragma' content='no-cache'>
-    <title>Software Architecture Design Wizard</title>
+    <title>Rapid Architecture Designer</title>
     <!-- <script src="https://unpkg.com/lodash@4.17.20"></script> -->
     <link rel="stylesheet" href="./style/archs.css">
     <link rel="stylesheet" href="./style/arrow.css">
