--- a/index.html
+++ b/index.html
@@ -49,6 +49,8 @@
         </div>
         <div id="Settings" class="tabcontent">
         </div>
+        <div id="Help" class="tabcontent">
+        </div>
     </div>
 
 
@@ -84,7 +86,7 @@
     <input id="file-input" type="file" name="name" style="display: none;" />
     <div id="jstree_demo_div"></div>
     <div id="trashBin" class="trashBin"></div>
-  
+
 </body>
 
 </html>
