--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/triangle.css">
     <link rel="stylesheet" href="./style/trash.css">
+    <link rel="stylesheet" href="./style/grid.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" crossorigin="anonymous" />
     <script type="module" src="./src/index.js"></script>
     <script src="https://code.jquery.com/jquery-3.6.0.js"></script>
