--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <script src="./libs/dom-to-image-more.min.js"></script>
 </head>
 
-<body id="body" style="background-color: rgb(210, 212, 236);">
+<body id="body" style="overflow: hidden;background-color: rgb(210, 212, 236);">
     <div id="tabArea" class="tab not-target">
 
     </div>
@@ -84,6 +84,9 @@
     </div> -->
     <input id="file-input" type="file" name="name" style="display: none;" />
     <div id="jstree_demo_div"></div>
+    <div id="helpButton" class="helpButton">
+        <img width="115" height="115" src="./images/helpButton.png">
+    </div>
     <div id="trashBin" class="trashBin"></div>
 
 </body>
