small ui changes

--- a/index.html
+++ b/index.html
@@ -85,7 +85,12 @@
     <input id="file-input" type="file" name="name" style="display: none;" />
     <div id="jstree_demo_div"></div>
     <div id="helpButton" class="helpButton">
-        <img width="115" height="115" src="./images/helpButton.png">
+        <img style="user-drag: none;
+        -webkit-user-drag: none;
+        user-select: none;
+        -moz-user-select: none;
+        -webkit-user-select: none;
+        -ms-user-select: none;" width="115" height="115" src="./images/helpButton.png">
     </div>
     <div id="trashBin" class="trashBin"></div>
 
