--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <input id="file-input" type="file" name="name" style="display: none;" />
     <div id="jstree_demo_div"></div>
     <div id="helpButton" class="helpButton">
-        <img style="
+        <img style="cursor: pointer;
         -webkit-user-drag: none;
         user-select: none;
         -moz-user-select: none;
