--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         </div> -->
     </div>
     <div id="fSidebar" class="rightSideBar">
-        <div id="closeLayersButton" style="margin-right:5px;margin-top:5px;float: right;"><img src="./images/oldCloseInfo.png" /></div>
+        <div id="closeLayersButton" style="margin-right:5px;margin-top:5px;float: right;cursor: pointer;"><img src="./images/oldCloseInfo.png" /></div>
         <div style="width:150px; padding-top: 50px; display: none;" id="jstree">
         </div>
     </div>
