--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
     </div>
     <div id="tabButtons" style="background-color: #f1f1f1;" class="not-target">
-        <div id="File" class="tabcontent">
+        <div id="Project" class="tabcontent">
         </div>
         <div id="Edit" class="tabcontent">
         </div>
@@ -84,14 +84,14 @@
     </div> -->
     <input id="file-input" type="file" name="name" style="display: none;" />
     <div id="jstree_demo_div"></div>
-    <div id="helpButton" class="helpButton">
+    <!-- <div id="helpButton" class="helpButton">
         <img style="cursor: pointer;
         -webkit-user-drag: none;
         user-select: none;
         -moz-user-select: none;
         -webkit-user-select: none;
         -ms-user-select: none;" width="96" height="96" src="./images/_circled.png">
-    </div>
+    </div> -->
     <div id="trashBin" class="trashBin"></div>
 
 </body>
