--- a/index.html
+++ b/index.html
@@ -73,6 +73,7 @@
     </div>
 
     <input id="file-input" type="file" name="name" style="display: none;" />
+    <input id="config-file-input" type="file" name="name" style="display: none;" />
     <div id="jstree_demo_div"></div>
     <div id="trashBin" class="trashBin"></div>
 </body>
