--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html id="html1">
+<html id="html1" style="height: 100%;">
 
 <head>
     <meta charset="utf-8" />
@@ -33,9 +33,10 @@
     <script src="./libs/dom-to-image-more.min.js"></script>
 
 </head>
+<!-- rgb(210, 212, 236),(109,109,193) -->
 
-<body id="body" style="overflow: hidden;background-color: rgb(210, 212, 236);">
-    <div style="top:8px;left:8px;width:99%;height:104.8px;position:absolute;z-index: 29 ;">
+<body id="body" style=" background-image: linear-gradient(to bottom,#ffffff, #e1e2e3 50%); overflow: hidden;background-color: rgb(210, 212, 236);">
+    <div style="top:8px;left:8px;width:99%;height:104.8px;position:absolute;z-index: 29 ;outline: 1px solid #ccc;">
         <div id="tabArea" class="tab not-target">
 
         </div>
@@ -61,12 +62,12 @@
 
       </div> -->
     </div>
-    <div id="right_tab" style="margin-top: 104.8px; z-index:29;" class="not-target">
+    <div id="right_tab" style="margin-top: 104.8px; z-index:29;top:9px;outline: 1px solid #ccc; border-top: none;" class="not-target">
         <!-- <h2 class="line" style="text-align: center; margin-top:1px;">Functions</h2>
         <div id="functionArea" class="functionRec">
         </div> -->
     </div>
-    <div id="fSidebar" style="margin-top: 104.8px;" class="rightSideBar">
+    <div id="fSidebar" style="margin-top: 104.8px;z-index:29;top:9px;outline: 1px solid #ccc; border-top: none;" class="rightSideBar">
         <div id="closeLayersButton" style="margin-right:5px;margin-top:5px;float: right;cursor: pointer;"><img src="./images/oldCloseInfo.png" /></div>
         <div style="width:150px; padding-top: 50px; display: none;" id="jstree">
         </div>
