window event class created and working

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
 </head>
 <!-- rgb(210, 212, 236),(109,109,193) -->
 
-<body id="body" style=" background-image: linear-gradient(to bottom,#ffffff, #e1e2e3 50%); overflow: hidden;background-color: rgb(210, 212, 236);">
-    <div style="top:8px;left:8px;width:99%;height:104.8px;position:absolute;z-index: 29 ;outline: 1px solid #ccc;">
+<body id="body" style=" background-image: linear-gradient(to bottom,#ffffff, rgb(210, 212, 236)); overflow: hidden;background-color: rgb(210, 212, 236);">
+    <div id="toolBar" style="top:8px;left:8px;width:99%;height:104.8px;position:absolute;z-index: 29 ;outline: 1px solid #ccc;">
         <div id="tabArea" class="tab not-target">
 
         </div>
@@ -57,7 +57,7 @@
     </div>
 
 
-    <div id="main" style="overflow: hidden;margin-top: 104.8px;width: 97%;height: 160%; float:left;">
+    <div id="main" style="overflow: hidden;margin-top: 104.8px;width: 97%;height: 100%; float:left;">
         <!-- <div class="workspace" id="workspace">
 
       </div> -->
