--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 <!-- rgb(210, 212, 236),(109,109,193) -->
 
 <body id="body" style=" background-image: linear-gradient(to bottom,#ffffff, rgb(210, 212, 236)); overflow: hidden;background-color: rgb(210, 212, 236);">
-    <div id="toolBar" style="top:8px;left:8px;width:99%;height:104.8px;position:absolute;z-index: 29 ;outline: 1px solid #ccc;">
+    <div id="toolBar" style="outline: 1px solid #ccc;top:8px;left:8px;width:99%;height:104.8px;position:absolute;z-index: 32 ;">
         <div id="tabArea" class="tab not-target">
 
         </div>
@@ -57,12 +57,13 @@
     </div>
 
 
-    <div id="main" style="overflow: hidden;margin-top: 104.8px;width: 97%;height: 100%; float:left;">
+    <div id="main" style="overflow: hidden;margin-top: 107px;width: 97%;height: calc(100%-108.8px); float:left;">
+        <!--  margin-top: 5px; height: inherit; width: 87%;  /* background-color: rgb(210, 212, 236); */ z-index: 2; -->
         <!-- <div class="workspace" id="workspace">
 
       </div> -->
     </div>
-    <div id="right_tab" style="margin-top: 104.8px; z-index:29;top:9px;outline: 1px solid #ccc; border-top: none;" class="not-target">
+    <div id="right_tab" style="outline: 1px solid #ccc;margin-top: 104.8px; z-index:29;top:9px; border-top: none;" class="not-target">
         <!-- <h2 class="line" style="text-align: center; margin-top:1px;">Functions</h2>
         <div id="functionArea" class="functionRec">
         </div> -->
