infoBoxes ui OK

--- a/index.html
+++ b/index.html
@@ -68,9 +68,10 @@
         <div id="functionArea" class="functionRec">
         </div> -->
     </div>
-    <div id="fSidebar" style="margin-top: 104.8px;z-index:29;top:9px;outline: 1px solid #ccc; border-top: none;" class="rightSideBar">
+    <div id="fSidebar" style="margin-top: 104.8px;background-color: white;z-index:29;top:9px;outline: 1px solid #ccc; border-top: none;" class="rightSideBar">
         <div id="closeLayersButton" style="margin-right:5px;margin-top:5px;float: right;cursor: pointer;"><img src="./images/oldCloseInfo.png" /></div>
-        <div style="width:150px; padding-top: 50px; display: none;" id="jstree">
+        <div class="sideTabTittle">Hierarchy Tree</div>
+        <div style="width:150px; display: none;" id="jstree">
         </div>
     </div>
 
