--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     </div>
 
 
-    <div id="main" style="overflow: hidden;margin-top: 107px;width: 97%;height: calc(100%-108.8px); float:left;">
+    <div id="main" style="overflow: hidden;margin-top: 107px;width: 97%;float:left;">
         <!--  margin-top: 5px; height: inherit; width: 87%;  /* background-color: rgb(210, 212, 236); */ z-index: 2; -->
         <!-- <div class="workspace" id="workspace">
 
