--- a/index.html
+++ b/index.html
@@ -30,12 +30,14 @@
     <script src="dist/jstree.js"></script>
     <!-- <script type="text/javascript" src="jquery.jstree.js"></script>
     <script type="text/javascript" src="_lib/jquery.js"></script> -->
+    <script src="https://unpkg.com/gojs@2.2.12/release/go.js"></script>
     <script src="./libs/dom-to-image-more.min.js"></script>
-
+    <script src="https://unpkg.com/gojs@2.2.12/extensions/Figures.js"></script>
+    <script src="https://unpkg.com/gojs@2.2.12/extensions/DrawCommandHandler.js"></script>
 </head>
-<!-- rgb(210, 212, 236),(109,109,193) -->
+<!-- rgb(210, 212, 236),(109,109,193)background-image: linear-gradient(to bottom,#ffffff, rgb(210, 212, 236));-->
 
-<body id="body" style=" background-image: linear-gradient(to bottom,#ffffff, rgb(210, 212, 236)); overflow: hidden;background-color: rgb(210, 212, 236);">
+<body id="body" style="  overflow: hidden;background-color: white;">
     <div id="toolBar" style="outline: 1px solid #ccc;top:8px;left:8px;width:99%;height:104.8px;position:absolute;z-index: 32 ;">
         <div id="tabArea" class="tab not-target">
 
@@ -78,7 +80,7 @@
     <input id="file-input" type="file" name="name" style="display: none;" />
     <input id="config-file-input" type="file" name="name" style="display: none;" />
     <div id="jstree_demo_div"></div>
-    <div id="trashBin" class="trashBin"></div>
+    <div id="trashBin" style="display: none;" class="trashBin"></div>
 </body>
 
 </html>
