infoBoxes & extending sidetabs fixed

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
 <!-- rgb(210, 212, 236),(109,109,193)background-image: linear-gradient(to bottom,#ffffff, rgb(210, 212, 236));-->
 
-<body id="body" style="  overflow: hidden;background-color: white;">
+<body id="body" style="background-image:linear-gradient(to bottom,#ffffff, rgb(210, 212, 236));  overflow: hidden;background-color: white;">
     <div id="toolBar" style="outline: 1px solid #ccc;top:8px;left:8px;width:99%;height:104.8px;position:absolute;z-index: 32 ;">
         <div id="tabArea" class="tab not-target">
 
