context menus added and function length fixed

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
     <script src="./libs/dom-to-image-more.min.js"></script>
     <script src="https://unpkg.com/gojs@2.2.12/extensions/Figures.js"></script>
     <script src="https://unpkg.com/gojs@2.2.12/extensions/DrawCommandHandler.js"></script>
+
+    <script src="https://unpkg.com/gojs@2.2.12/extensions/Robot.js"></script>
 </head>
 <!-- rgb(210, 212, 236),(109,109,193)background-image: linear-gradient(to bottom,#ffffff, rgb(210, 212, 236));-->
 
