--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <input id="file-input" type="file" name="name" style="display: none;" />
     <input id="config-file-input" type="file" name="name" style="display: none;" />
     <div id="jstree_demo_div"></div>
-    <div id="trashBin" style="display: none;" class="trashBin"></div>
+    <div id="trashBin" style="display: block; z-index: inherit;" class="trashBin"></div>
 </body>
 
 </html>
