--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         </div> -->
     </div>
     <div id="fSidebar" style="margin-top: 104.8px;background-color: white;z-index:29;top:0px;outline: 1px solid #ccc; border-top: none;" class="rightSideBar">
-        <div id="closeLayersButton" style="margin-right:5px;margin-top:5px;float: right;cursor: pointer;"><img src="./images/oldCloseInfo.png" /></div>
+        <div id="closeLayersButton" style="margin-right:5px;margin-top:5px;float: right;cursor: pointer;display: none;"><img src="./images/oldCloseInfo.png" /></div>
         <div class="sideTabTittle">Hierarchy Tree</div>
         <div style="width:150px; display: none;" id="jstree">
         </div>
