--- a/index.html
+++ b/index.html
@@ -21,6 +21,8 @@
     <link rel="stylesheet" href="./style/style.css">
     <link rel="stylesheet" href="./style/triangle.css">
     <link rel="stylesheet" href="./style/trash.css">
+    <link rel="stylesheet" href="./style/ZoomSlider.css">
+
     <link rel="stylesheet" href="./style/grid.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" crossorigin="anonymous" />
     <script type="module" src="./src/index.js"></script>
@@ -36,6 +38,8 @@
     <script src="https://unpkg.com/gojs@2.2.12/extensions/DrawCommandHandler.js"></script>
 
     <script src="https://unpkg.com/gojs@2.2.12/extensions/Robot.js"></script>
+    <script src="https://unpkg.com/gojs@2.2.12/extensions/ZoomSlider.js"></script>
+
 </head>
 <!-- rgb(210, 212, 236),(109,109,193)background-image: linear-gradient(to bottom,#ffffff, rgb(210, 212, 236));-->
 
