fx selection icon ok & zoom menu added.

--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <link rel="stylesheet" href="./style/triangle.css">
     <link rel="stylesheet" href="./style/trash.css">
     <link rel="stylesheet" href="./style/ZoomSlider.css">
+    <link rel="stylesheet" href="./style/inputSelecting.css">
 
     <link rel="stylesheet" href="./style/grid.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/jstree/3.2.1/themes/default/style.min.css" crossorigin="anonymous" />
